# PSQLAgent

./: .gitignore  README.md  prompts.txt  pyproject.toml  results.txt
.cache/42/: cache.db
psqlagent/: api-main.py  main.py
psqlagent/agents/: agent_config.py  agents.py  prompts.py
psqlagent/modules/: db.py  embeddings.py  llm.py  orchestrator.py
psqlagent/modules/db/: dbmanager.py  postgres.py  sqlserver.py
psqlagent/utils/: prompts.py
