[tool.poetry]
name = "psqlagent"
version = "0.1.0"
description = ""
authors = ["Jose Miguel Chacón <josemiguelchacon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
psycopg2-binary = "^2.9.9"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"
autogen = "^1.0.16"
pyautogen = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "psqlagent.main:main"