[tool.poetry]
name = "psqlagent"
version = "0.1.0"
description = ""
authors = ["Jose Miguel Chacón <josemiguelchacon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
psycopg2-binary = "^2.9.9"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"
pyautogen = "^0.1.10"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
transformers = "^4.34.1"
torch = "^2.1.0"
tiktoken = "^0.5.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn psqlagent.api-main:app --reload"
startcli = "psqlagent.main:main"